--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable = no, initial-scale=1.0"> 
     <title>神笔马良</title>
     <link rel="stylesheet" href="./style.css">
 </head>
